fix: remove horizontal scroll on background image in top section

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -14,8 +14,7 @@ body {
   font-family: "Roboto", sans-serif;
   line-height: 1;
   color: #383838;
-  line-height: 1;
-  font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
